<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:padding="@dimen/view_height_40"
    >


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_scale_bottom_selector"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_10"

        >


    <ImageView
        android:id="@+id/zoominImgVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/done_blue"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/view_height_85"
        android:layout_marginRight="@dimen/view_height_85"
        />



        <com.customfont.textview.FuturaBkTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/success"
            android:textStyle="bold"
            android:textColor="@color/text_new_heading"
            android:textSize="@dimen/text_size_25" />



        <com.customfont.textview.FuturaMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_completed"
            android:textColor="@color/text_colornew"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_size_17"
            android:paddingRight="@dimen/margin_short_5"
            android:paddingTop="@dimen/margin_short_7"
            android:paddingBottom="@dimen/margin_short_6"
            android:textAllCaps="false"
            android:singleLine="true"

            />


        <com.customfont.button.FuturaMediumButton
            android:id="@+id/jobDoneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_17"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/blue_bottom_scale_selector"

            />

    </LinearLayout>


</LinearLayout>